--- a/src/App.css
+++ b/src/App.css
@@ -3,15 +3,20 @@
 }
 section {
 	max-width: 800px;
-    margin: 0 auto;
+    margin: 6px auto;
+    display: flex;
 	border-radius: 7px;
     border-color: #bfbcbc47;
     border-width: 2px;
     border-style: solid;
+    background: #837f7f1a;
 }
 
 img {
-	    margin: 42px 12px
+	    margin: 42px 12px;
+        border-radius: 3px;
+        height:96px;
+        width:96px;
 }
 ul {
 	list-style-type:none;
